--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url('bg.jpg');
+	background-image: url('https://raw.githubusercontent.com/Emomentum/KATA/master/bg.jpg');
 	}
 .header
 	{
