--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url('https://sites.google.com/site/kataintranet/config/bg.jpg.1433750640107.jpg');
+	/*background-image: url('https://sites.google.com/site/kataintranet/config/bg.jpg.1433750640107.jpg');*/
 	
     background-repeat: repeat-x;
 	
