--- a/styles.css
+++ b/styles.css
@@ -94,3 +94,11 @@ font-size:13px;
  margin-left: auto;
  background-color: #f0f0f0;
 }
+.panel
+{
+  background-color: #fff;
+  border: 0px;
+  border-radius: 0px;;
+ -webkit-box-shadow:none;
+ box-shadow: none;
+ }
